--- a/src/styles/browser.css
+++ b/src/styles/browser.css
@@ -29,13 +29,6 @@
     visibility: visible;
   }
 
-  .left-header {
-    grid-column: 1 / 2;
-    grid-row: 1 / 2;
-    padding: 20px;
-    font-size: 30px;
-  }
-
   .right-header {
     grid-column: 3 / 4;
     grid-row: 1 / 2;
