--- a/src/styles/mobile.css
+++ b/src/styles/mobile.css
@@ -20,21 +20,6 @@
     visibility: hidden;
   }
 
-  .left-header {
-    grid-column: 1 / 2;
-    grid-row: 1 / 2;
-    display: flex;
-    flex-direction: row;
-    padding: 20px;
-    font-size: 30px;
-    font-weight: 700;
-    font-family: "Libre Baskerville", serif;
-    justify-content: left;
-    font-weight: normal;
-    text-align: center;
-    visibility: visible;
-  }
-
   .right-header {
     grid-column: 3 / 4;
     grid-row: 1 / 2;
